--- a/src/style.css
+++ b/src/style.css
@@ -545,7 +545,7 @@ header {
 
 header h1 {
     font-size: 2rem;
-    margin: 0;
+    margin: 0 0 0.75rem;
 }
 
 header p {
@@ -554,12 +554,18 @@ header p {
 }
 
 section {
-    margin-bottom: 2rem;
+    margin-bottom: 1.75rem;
+}
+
+section:last-child {
+    margin-bottom: 0;
 }
 
 section h2 {
     border-bottom: 1px solid var(--text);
     font-size: 1.5rem;
+    padding-top: 0;
+    margin-top: 0;
     margin-bottom: 1rem;
     padding-bottom: 0.5rem;
 }
@@ -676,18 +682,20 @@ Print Styles
     }
     h3 {
         font-size: 0.9rem !important;
+        line-height: 1.1rem !important;
     }
     h4 {
         font-size: 0.8rem !important;
+        line-height: 0.9rem !important;
     }
-    h3, h4 {
+    /* h3, h4 {
         float: left;
     }
 
     h2 + p.date, h3 + p.date, h4 + p.date {
         float: right;
         text-align: right;
-    }
+    } */
 
     h3 + p.date, h4 + p.date {
         margin: 1rem 0px !important;
@@ -745,7 +753,7 @@ p.date::before {
 }
 
 @media (min-width: 769px) {
-    h3, h4 {
+    /* h3, h4 {
         float: left;
     }
 
@@ -753,7 +761,7 @@ p.date::before {
         float: right;
         text-align: right;
         clear: inline-end;
-    }
+    } */
 
     h3 + p.date, h4 + p.date {
         margin: 1.3rem 0px;
