Add a slash at the end of the category link

--- a/writings/layouts/_default/index.html
+++ b/writings/layouts/_default/index.html
@@ -10,7 +10,7 @@
     <nav class="category-nav">
       <strong>Categories:</strong>
       {{ range $key, $value := .Site.Taxonomies.categories }}
-        <a href="{{ "categories/" | relLangURL }}{{ urlize $key }}">{{ $key }}</a>&nbsp;
+        <a href="{{ "categories/" | relLangURL }}{{ urlize $key }}/">{{ $key }}</a>&nbsp;
       {{ end }}
     </nav>
   {{ end }}
