--- a/src/style.css
+++ b/src/style.css
@@ -126,7 +126,7 @@ body {
     background-image: var(--bg-image);
     background-repeat: repeat;
     color: var(--text);
-    font-family: 'Fira Code', monospace;
+    font-family: 'Fira Sans', monospace;
     height: 100%;
     justify-content: center;
     margin: 0;
@@ -134,6 +134,7 @@ body {
     overflow: hidden;
     padding: 0;
     transition: background-color 0.3s, color 0.3s, background-image 0.3s;
+    line-height: 1.35;
 }
 
 .menu {
@@ -188,7 +189,7 @@ body {
     border-radius: 50%;
     background-color: var(--header-bg);
     cursor: pointer;
-    font-family: 'Noto Sans Mono', monospace;
+    font-family: 'Fira Code', monospace !important;
     transition: background-color 0.3s, color 0.3s;
     margin: 0.5rem;
     width: 5rem;
@@ -635,6 +636,10 @@ a.no-text:hover {
 
 .keywords {
     display: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Fira Code', monospace !important;
 }
 
 /* ==================================
