Updated licensing and README

--- a/writings/layouts/partials/footer.html
+++ b/writings/layouts/partials/footer.html
@@ -5,7 +5,7 @@
         <span>{{ $.Site.Copyright | safeHTML }}</span>
     {{ else }}
       <div class="copyright">
-        <span>© {{ now.Year }} <a href="/">Tucker McLean</a></span>
+        <span>© {{ now.Year }} <a class="author" href="/">Tucker McLean</a> — licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY‑SA 4.0</a></span>
     {{ end }}
       </div>
   </div>
